Fix text overflow on mobile

--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -214,7 +214,7 @@ body {
 
 @media (max-width: 768px) {
 	.title {
-		padding-top: 30px;
+		padding-top: 20px;
 		font-size: 3rem;
 	}
 
@@ -228,14 +228,18 @@ body {
 	}
 
 	.tabcontainer {
-		margin-left: 10%;
-		width: 80%;
+		margin-left: 5%;
+		width: 90%;
 	}
 
 	.tab {
 		padding: 25px;
 		height: 220px;
 		font-size: 1rem;
+	}
+
+	#aboutdiv {
+		padding: 10px;
 	}
 
 	.project {
